# online_skeleton_extraction_path_planner

./: .gitignore  .gitmodules  README.md
scripts/: build_docker_workspace.sh  build_local_workspace.sh  docker_env_setup.sh
src/osep/: CMakeLists.txt  package.xml
src/osep/config/nvblox/: nvblox_2d.yaml
src/osep/config/visualization/: isaac_sim_example.rviz  results.rviz
src/osep/include/: static_pointcloud_processor.hpp  tsdf_to_pointcloud.hpp
src/osep/launch/: 2d_nvblox.launch.py  3d_nvblox.launch.py  osep.launch.py  osep_core.launch.py  osep_nvblox.launch.py  osep_results.launch.py  px4.launch.py
src/osep/launch/perception/: nvblox.launch.py
src/osep/launch/results/: ground_truth_path_saver.launch.py  osep_pcd_saver.launch.py  osep_results_playback.launch.py
src/osep/launch/visualization/: rviz.launch.py  visualization.launch.py
src/osep/results/: build_cmd.txt  shell_static_cloud_60.pcd  stl_to_poincloud.py  stl_to_pointcloud  stl_to_pointcloud.cpp  wind_0_gt.csv
src/osep/src/: ground_truth_path_saver.py  ground_truth_republisher.py  nvblox_voxel_map.cpp  publish_sample_pointcloud.py  publish_stl.py  result_displayer.cpp  result_processor.py  static_pointcloud_processor.cpp  static_pointcloud_saver.py  static_tf_pub.py  test_flight.py  tsdf_skeleton.cpp  tsdf_skeleton.py  tsdf_to_pointcloud.cpp  tsdf_to_skeleton.py
src/osep/stl_models/: wind_0.stl  wind_120.stl  wind_45.stl  wind_60.stl  wind_75.stl  wind_90.stl
